--- a/css/scss/_grid.scss
+++ b/css/scss/_grid.scss
@@ -75,7 +75,7 @@ $s-device: 480px;
 
 @for $i from 1 through $cols {
   .offset-#{$i} {
-    width: grid($i, offset);
+    margin-left: grid($i, offset);
     @extend %offset;
   }
 }
