Finalized _geral.scss

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,7 +1,4 @@
 @import 'reset';
 @import 'grid';
-
-div {
-  font-family: 'PT Mono', monospace;
-  font-family: 'Aref Ruqaa', serif;
-}
+@import 'variaveis-e-mixins';
+@import 'geral';
