--- a/css/scss/_geral.scss
+++ b/css/scss/_geral.scss
@@ -1,37 +1,37 @@
 body {
-  background: $bege-claro;
-  border: rem(10) solid $bege-medio;
-  color: $cinza;
-  @include device(small) {
-    border: none;
-  }
+	background: $bege-claro;
+	border: 10px solid $bege-medio;
+	color: $cinza;
+	@include device(small) {
+		border: none;
+	}
 }
 
 img {
-  display: block;
-  max-width: 100%;
+	display: block;
+	max-width: 100%;
 }
 
 p {
-  @include tipo-1(18);
+	@include tipo-1(18);
 }
 
 .titulo {
-  @include tipo-1(18);
-  text-transform: uppercase;
-  @include device(small) {
-    margin-bottom: rem(40);
-  }
-  &::after {
-    content: '';
-    display: block;
-    background: $cinza;
-    width: 75%;
-    float: right;
-    height: rem(2);
-    margin-top: rem(8);
-    @include device(medium) {
-      width: 60%;
-    }
-  }
+	@include tipo-1(18);
+	text-transform: uppercase;
+	@include device(small) {
+		margin-bottom: 40px;
+	}
+	&::after {
+		content: '';
+		display: block;
+		width: 75%;
+		float: right;
+		height: 2px;
+		background: $cinza;
+		margin-top: 14px;
+		@include device(medium) {
+			width: 60%;
+		}
+	}
 }
